--- a/Estudos/html-css/exercicios/ex022/fundo006.html
+++ b/Estudos/html-css/exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Background Size</title>
     <style>
         body {
             height: 100vh;
@@ -31,6 +31,10 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum amet numquam, consequatur nam officiis natus vitae cum. Tempore fugiat maxime, impedit, et autem, temporibus magni dolor debitis ut perferendis excepturi.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio hic ipsum a. Magnam accusantium sapiente excepturi, alias reprehenderit, earum nobis totam, tenetur iusto ullam cum perspiciatis nisi minima voluptas aut?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore pariatur vero saepe obcaecati hic rem distinctio. Deleniti, voluptas dolorum ea perspiciatis esse, eius alias reprehenderit doloribus cumque dicta saepe corrupti!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum beatae fugit doloremque a rem, sunt aliquam assumenda accusantium delectus ex odit corrupti asperiores quod. Deleniti, quibusdam sunt. Asperiores, at libero!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, atque ducimus, praesentium exercitationem beatae ea consectetur harum totam eius mollitia earum, hic sit commodi laborum culpa impedit nostrum ratione quas.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eligendi facere nulla deserunt velit vel sequi id. Illum quidem, ea, quae quaerat suscipit, magnam unde odit iusto numquam distinctio dignissimos.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur fugit vitae nulla praesentium temporibus incidunt non. Amet rem, explicabo iure voluptatibus pariatur, fuga nesciunt qui ullam officiis natus asperiores consequuntur!
         </p>
     </main>
 </body>
