--- a/Desafios/Módulo 3/d012/index.html
+++ b/Desafios/Módulo 3/d012/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Cordel</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+        <header>
+            <h1>Cordel Moderno</h1>
+            <p>Por Milton Duarte</p>
+        </header>
+        
+    <main>
+        <section>
+            <div>
+                <p>
+                    Estou ficando cansado <br> Da tal tecnologia<br>Só se fala por e-mail<br>Mensagem curta e fria<br>Twitter e Facebook<br>Antes que eu caduque<br>Vou dizer tudo em poesia.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <p>
+                    Não é mais como era antes<br>É tudo abreviado<br>"Você" só tem duas letras<br>O "O" e o "E" foi riscado<br>Para declarar o amor<br>Basta botar uma flor<br>E um coração desenhado.
+                </p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
