--- a/Desafios/Módulo 3/d012/index.html
+++ b/Desafios/Módulo 3/d012/index.html
@@ -10,7 +10,7 @@
 <body>
         <header>
             <h1>Cordel Moderno</h1>
-            <p>Por Milton Duarte</p>
+            <p>Por <strong>Milton Duarte</strong></p>
         </header>
         
     <main>
@@ -21,13 +21,44 @@
                 </p>
             </div>
         </section>
-        <section>
-            <div>
-                <p>
+        <br>
+        <section id="container1">
+            <div id="conteudo1">
+                <p class="txt-attachment">
                     Não é mais como era antes<br>É tudo abreviado<br>"Você" só tem duas letras<br>O "O" e o "E" foi riscado<br>Para declarar o amor<br>Basta botar uma flor<br>E um coração desenhado.
                 </p>
             </div>
         </section>
+        <br><br>
+        <section>
+            <div>
+                <p>
+                    Arroba agora não pesa<br>É parte de um endereço<br>Ponto final nem se usa<br>Ou vai até no começo<br>Agora é .com<br>Se o saite é muito bom<br>Ele vale um alto preço.
+                    <br>
+                    Pra piorar a liguagem<br>O emoticom é um risco<br>Tem símbolo para tudo<br>Ponto e vírgula e um asterisco<br>Um beijo significa<br>Pra entender como fica<br>Decifre esse rabisco.
+                </p>
+            </div>
+        </section>
+        <section id="container2">
+            <div id="conteudo2">
+                <p class="txt-attachment2">
+                    Tenho saudade das cartas<br>Escritas com a própria mão<br>Mandava no mês de Junho<br>Só chegava no Verão<br>Mas matava a saudade<br>Era texto de verdade<br>Nas linhas do coração.
+                </p>
+            </div>
+        </section>
+        <br><br>
+        <section>
+            <div>
+                <p>
+                    Agora, escrevo e envio<br>Chegando na mesma hora<br>Mas quando vou prosear<br>A pessoa foi embora<br>Abriu outro aplicativo<br>O mundo ficou cativo<br>Da tecnologia do agora.
+                    <br>
+                    Felizmente, pra orar<br>Não precisa de internet<br>Deus escuta todo mundo<br>Se quiser, faça esse teste<br>Dois pontos são dois joelhos<br>Seus lábios são aparelhos<br>Deixe que Deus interprete.
+                </p>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p>Site criado por <a href="https://github.com/monteiromanoel" target="_blank">Manoel Monteiro</a> para o <a href="http://www.cursoemvideo.com" target="_blank">Curso em Vídeo</a></p>
+    </footer>
 </body>
 </html>
